--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
   background: var(--bg-primary);
   color: var(--text-secondary);
   transition: background 0.3s, color 0.3s;
-  font-size:70%;
+  font-size:60%;
 }
 
 /* Logo Styles */
@@ -627,7 +627,7 @@ body.dark-mode .details-content {
   transition: 0.3s;
 }
 .branch-name{
-  color: rgb(73, 215, 217);
+  color: white; 
   text-shadow: rgb(206, 79, 44) 1px;
   font-size: 1.2rem;
 }
@@ -805,4 +805,5 @@ body.dark-mode .details-content {
   .branches-list {
     grid-template-columns: 1fr;
   }
+
 }
